# model-sandbox-protocol

./: AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Implementation notes.md
docs/: ARCHITECTURE.md  LIBRARY_CHOICES.md  SECURITY.md  SECURITY_MODEL.md  SYSTEM_REQUIREMENTS.md
docs/troubleshooting/: PARALLEL_SANDBOX_FLAKINESS.md
src/: error.rs  lib.rs  main.rs
src/sandbox/: config.rs  container.rs  mod.rs  mounts.rs  security.rs  workspace.rs
src/server/: handler.rs  mod.rs
src/session/: lifecycle.rs  meta.rs  mod.rs  storage.rs
src/system/: mod.rs  requirements.rs
tests/: sandbox.rs  security.rs  session.rs
